bk_ida/gccida/c2/const_hash
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/const_hash/src/varasm.c:2969:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/const_hash/src/varasm.c:2976:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/const_hash/src/varasm.c:3047:20: error: expected expression
v19 = ( tree_node *)j[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/const_hash/src/varasm.c:3047:9: error: use of undeclared identifier 'tree_node'
v19 = ( tree_node *)j[4]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/const_hash/src/obj/varasm.o] Error 1
